reverted proj 2 styles - display handled in js - trying to simplify page code

--- a/projects/naptime/index.html
+++ b/projects/naptime/index.html
@@ -59,16 +59,7 @@ input#toggle , #wakeup {
 &lt;html&gt;
 &lt;head&gt;
 &lt;meta charset="UTF-8"&gt;
-&lt;title&gt;Nap Time&lt;/title&gt;
-&lt;style&gt;
-    input, p {
-        font-size: 250%;
-        text-align: right;
-    }
-    input#toggle, #wakeup {
-        display: none;
-    }
-&lt;/style&gt;
+&lt;title&gt;Programming a Timer with HTML5 Audio&lt;/title&gt;
 &lt;/head&gt;
 &lt;body&gt;
 &lt;/body&gt;
