updated class info

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <br>
 </p>
 <h3>Class Forums</h3>
-<p>To post a question or comment to the instructor and/or class, you can either use the <a class="label label-success"  href="http://online.santarosa.edu/cgi-bin/autocate/presentation/makepre.cgi">Class Message Board on CATE</a>, or you can post a comment at the bottom of any webpage on the syllabus.   Students can update their profiles on CATE to opt out of receiving emails from the Class Message Board.   Students can also create profiles on Disqus when leaving a comment, allowing them to set email notifications to follow discussions.  </p>
+<p>To post a question or comment to the instructor and/or class, you can either use the <a class="label label-success"  href="http://online.santarosa.edu/presentation/page/?108996">Class Message Board on CATE</a>, or you can post a comment at the bottom of any webpage on the syllabus.   Students can update their profiles on CATE to opt out of receiving emails from the Class Message Board.   Students can also create profiles on Disqus when leaving a comment, allowing them to set email notifications to follow discussions.  </p>
 <h3>CATE Check-in </h3> <p>  
 <a class="label label-success"  href="https://online.santarosa.edu/cgi-bin/autocate/student/checkin.cgi?15146">ONLINE section 1371</a>   &nbsp;&nbsp; &amp;&nbsp;&nbsp;
 <a class="label label-success"  href="https://online.santarosa.edu/cgi-bin/autocate/student/checkin.cgi?15147">IN-CLASS section 1516</a>  
@@ -170,9 +170,7 @@
     credit up to one week after the due date. Any assignments turned in more than one week
     late will receive no credit.</p>
   <h4>Credit-No Credit</h4>
-  <p>You may take this class credit/no-credit. You must decide before the fifth class and file the
-    appropriate form with Admissions and Records. You must complete the midterm and final
-    quizzes and projects to receive class credit.</p>
+  <p>This class may be taken for a grade only, there is no P/NP option.</p>
   <h4>Dropping the Class</h4>
   <p>If you decide to discontinue this course, it is your responsibility to officially drop it to avoid
     getting no refund (after 10% of course length), a W symbol (after 20%), or a grade (after
@@ -210,7 +208,7 @@
   </tr>
   <tr>
     <td>Last Day for P/NP option: </td>
-    <td align="right">9/30/2012</td>
+    <td align="right">n/a</td>
   </tr>
   <tr>
     <td>Last Day Drop w/o W:</td>
