--- a/projects/naptime/index.html
+++ b/projects/naptime/index.html
@@ -41,7 +41,7 @@ input#toggle , #wakeup {
   <input type="button" value="Start Nap" id="start" />
   <input type="button" value="Pause Music" id="toggle" />
 </form>
-<audio id="audiotag1" src="stellar.mp3" preload="auto"></audio>
+<audio id="sleepmusic" src="stellar.mp3" preload="auto"></audio>
 </div>
 
 
