--- a/index.html
+++ b/index.html
@@ -380,8 +380,55 @@ possible to better ensure such accommodations are implemented in a timely fashio
     <td><a href="http://online.santarosa.edu/testbank/?24872">Final</a></td>
   </tr>
 </table>
-          
-  
+        <h3>Student Gallery</h3>  
+  <ul class="unstyled">
+    <li><a href="http://alexaspinall.com/cs5011/"><i class="icon-user"></i> Alex</a></li>
+    <li><a href="http://student.santarosa.edu/~craschke"><i class="icon-user"></i> Andrea</a></li>
+    <li><a href="http://student.santarosa.edu/~apowers/"><i class="icon-user"></i> Angie</a></li>
+    <li><a href="http://student.santarosa.edu/~bgiovann/Javascript/index.html"><i class="icon-user"></i> Brandon</a></li>
+    <li><a href="http://www.calwalker.com/Assignment1/index.html"><i class="icon-user"></i> Calvin</a></li>
+  <li><a href="http://student.santarosa.edu/~cguempe1/cs5511/index.html"><i class="icon-user"></i>   Carlene</a></li>
+    <li><a href="http://student.santarosa.edu/~cwhitehe/js/index.html"><i class="icon-user"></i> Clark</a></li>
+    <li><a href="http://student.santarosa.edu/~dlangdon/js/homework.html"><i class="icon-user"></i> DiAnn</a></li>
+    <li><a href="http://busstudent.santarosa.edu/~dasker/Project1/"><i class="icon-user"></i>  Doug</a></li>
+ <li><a href="http://student.santarosa.edu/~dapitts/CS55.11/Project%201/"><i class="icon-user"></i> Drake</a></li>
+     <li><a href="http://www.hostboxter.com/proofs/dustinCooper/CS55.11/"><i class="icon-user"></i>  Dustin</a></li>
+     <li><a href="http://student.santarosa.edu/~egreen/javascript/index.html"><i class="icon-user"></i>  Eric</a></li>
+    <li><a href="http://student.santarosa.edu/~iguzman/javascript/index.html"><i class="icon-user"></i>  Imelda </a></li>
+    <li><a href="http://student.santarosa.edu/~ialameid/main/main.html"><i class="icon-user"></i>  Irene</a></li>
+    <li><a href="http://student.santarosa.edu/~jfaison/intro.html"><i class="icon-user"></i>  Jere</a></li>
+    <li><a href="http://student.santarosa.edu/~johara/javascript/"><i class="icon-user"></i>  Jim </a></li>
+    <li><a href="http://student.santarosa.edu/~jclark2/javascript/index.php"><i class="icon-user"></i>  Joan</a></li>
+    <li><a href="http://student.santarosa.edu/~josman/js/index.html"><i class="icon-user"></i> Jon</a></li>
+    <li><a href="http://student.santarosa.edu/~jmorehea/"><i class="icon-user"></i> John  </a></li>
+    <li><a href="http://www.cs5513.com/php4525/javascript/index.php"><i class="icon-user"></i> Justin</a></li>
+    <li><a href="http://student.santarosa.edu/~kwalli/index.html"><i class="icon-user"></i> Kevin</a></li>
+    <li><a href="http://student.santarosa.edu/~kjanssen/js/"><i class="icon-user"></i> Kyle</a></li> 
+    <li><a href="http://student.santarosa.edu/~ldewald/javascript/index.html"><i class="icon-user"></i> Laura</a></li>
+    <li><a href="http://student.santarosa.edu/~lbailey2/CS5011/"><i class="icon-user"></i> Lisa B.</a></li>
+    <li><a href="http://student.santarosa.edu/~ldavis/CS55.11_javascript/aboutme2.html"><i class="icon-user"></i> Lisa D.</a></li>
+    <li><a href="http://student.santarosa.edu/~mogilvie/javascript/index.html"><i class="icon-user"></i> Margaret</a></li>
+    <li><a href="http://student.santarosa.edu/~mcovert/2012fall/javascript/"><i class="icon-user"></i> Marc</a></li>
+  <li><a href="http://student.santarosa.edu/~mmcgrady/cs5511/"><i class="icon-user"></i>  Mark </a></li>
+    <li><a href="http://student.santarosa.edu/~mmayo1/"><i class="icon-user"></i> Matthew</a></li>
+    <li><a href="http://student.santarosa.edu/~mlimoncz/javascript/"><i class="icon-user"></i> Miranda</a></li>
+    <li><a href="http://student.santarosa.edu/~parchiab/cs55_11/index.html"><i class="icon-user"></i> Paul A.</a></li>
+    <li><a href="http://student.santarosa.edu/~pmcgavin/"><i class="icon-user"></i> Paul McG</a></li>
+    <li><a href="http://student.santarosa.edu/~rsathe/javascript/project1.html"><i class="icon-user"></i> Rohan</a></li>
+    <li><a href="http://student.santarosa.edu/~rcapistr/javascript/assignments.html"><i class="icon-user"></i> Ron</a></li>
+      <li><a href="http://student.santarosa.edu/~rcarter/java/java/javaclass.html"><i class="icon-user"></i> Rosa </a></li> 
+      <li><a href="http://student.santarosa.edu/~rgalten/JavaScript/index.html"><i class="icon-user"></i>  Rosemary </a></li> 
+      <li><a href="http://student.santarosa.edu/~shubbard/JavaScript/"><i class="icon-user"></i> Scott</a></li>
+     <li><a href="http://student.santarosa.edu/~syam/2012fall/cs5511/"><i class="icon-user"></i>  Shannon </a></li>
+      <li><a href=" http://student.santarosa.edu/~spen/CS55.11/"><i class="icon-user"></i> Sopheap </a></li>
+      <li><a href="http://student.santarosa.edu/~savery/js/"><i class="icon-user"></i> Steve A</a></li>
+     <li><a href="http://student.santarosa.edu/~skirkish/CS5511/home/index.html"><i class="icon-user"></i> Steve K</a></li>
+      <li><a href="http://student.santarosa.edu/~swright2/"><i class="icon-user"></i> Suzanne </a></li>
+      <li><a href="http://student.santarosa.edu/~vmazza/javascript/homework.html"><i class="icon-user"></i> Vincent </a></li>
+     <!-- 
+      
+      -->
+    </ul>
         </div>
 
 </div>
