added array lesson

--- a/index.html
+++ b/index.html
@@ -283,13 +283,13 @@ possible to better ensure such accommodations are implemented in a timely fashio
     <td><a href="projects/programming/index.html">Project 1</a></td>
    
   </tr>
-  <tr class="current-week">
+  <tr>
     <td>Sep 4</td>
     <td><a href="lessons/data-types.html">Numbers, Strings and Dates</a></td>
    
     <td><a href="http://online.santarosa.edu/testbank/?24820">Quiz 1</a></td>
   </tr>
-  <tr>
+  <tr class="current-week">
     <td>Sept 11</td>
     <td><a href="lessons/functions.html">Functions</a>, <a href="lessons/events.html">Events</a> and Objects </td>
     <td><a href="/~jperetz/fall2012/projects/naptime/">Project 2</a></td>
@@ -380,8 +380,11 @@ possible to better ensure such accommodations are implemented in a timely fashio
     <td><a href="http://online.santarosa.edu/testbank/?24872">Final</a></td>
   </tr>
 </table>
+
+
         <h3>Student Gallery</h3>  
-  <ul class="unstyled">
+        <div class="span2">
+  <ul class="unstyled students">
     <li><a href="http://alexaspinall.com/cs5011/"><i class="icon-user"></i> Alex</a></li>
     <li><a href="http://student.santarosa.edu/~craschke"><i class="icon-user"></i> Andrea</a></li>
     <li><a href="http://student.santarosa.edu/~apowers/"><i class="icon-user"></i> Angie</a></li>
@@ -404,9 +407,13 @@ possible to better ensure such accommodations are implemented in a timely fashio
     <li><a href="http://www.cs5513.com/php4525/javascript/index.php"><i class="icon-user"></i> Justin</a></li>
     <li><a href="http://student.santarosa.edu/~kwalli/index.html"><i class="icon-user"></i> Kevin</a></li>
     <li><a href="http://student.santarosa.edu/~kjanssen/js/"><i class="icon-user"></i> Kyle</a></li> 
+    </ul>
+    </div>
+    <div class="span2">
+  <ul class="unstyled students">
     <li><a href="http://student.santarosa.edu/~ldewald/javascript/index.html"><i class="icon-user"></i> Laura</a></li>
     <li><a href="http://student.santarosa.edu/~lbailey2/CS5011/"><i class="icon-user"></i> Lisa B.</a></li>
-    <li><a href="http://student.santarosa.edu/~ldavis/CS55.11_javascript/aboutme2.html"><i class="icon-user"></i> Lisa D.</a></li>
+    <li><a href="http://student.santarosa.edu/~ldavis/CS55.11_javascript/aboutme3.html"><i class="icon-user"></i> Lisa D.</a></li>
     <li><a href="http://student.santarosa.edu/~mogilvie/javascript/index.html"><i class="icon-user"></i> Margaret</a></li>
     <li><a href="http://student.santarosa.edu/~mcovert/2012fall/javascript/"><i class="icon-user"></i> Marc</a></li>
   <li><a href="http://student.santarosa.edu/~mmcgrady/cs5511/"><i class="icon-user"></i>  Mark </a></li>
@@ -419,16 +426,18 @@ possible to better ensure such accommodations are implemented in a timely fashio
       <li><a href="http://student.santarosa.edu/~rcarter/java/java/javaclass.html"><i class="icon-user"></i> Rosa </a></li> 
       <li><a href="http://student.santarosa.edu/~rgalten/JavaScript/index.html"><i class="icon-user"></i>  Rosemary </a></li> 
       <li><a href="http://student.santarosa.edu/~shubbard/JavaScript/"><i class="icon-user"></i> Scott</a></li>
-     <li><a href="http://student.santarosa.edu/~syam/2012fall/cs5511/"><i class="icon-user"></i>  Shannon </a></li>
+     <li><a href="http://student.santarosa.edu/~syam/2012fall/index.html"><i class="icon-user"></i>  Shannon </a></li>
       <li><a href=" http://student.santarosa.edu/~spen/CS55.11/"><i class="icon-user"></i> Sopheap </a></li>
       <li><a href="http://student.santarosa.edu/~savery/js/"><i class="icon-user"></i> Steve A</a></li>
      <li><a href="http://student.santarosa.edu/~skirkish/CS5511/home/index.html"><i class="icon-user"></i> Steve K</a></li>
       <li><a href="http://student.santarosa.edu/~swright2/"><i class="icon-user"></i> Suzanne </a></li>
       <li><a href="http://student.santarosa.edu/~vmazza/javascript/homework.html"><i class="icon-user"></i> Vincent </a></li>
+      
      <!-- 
       
       -->
     </ul>
+    </div>
         </div>
 
 </div>
