menu and homepage updates

--- a/index.html
+++ b/index.html
@@ -290,13 +290,16 @@ possible to better ensure such accommodations are implemented in a timely fashio
   </tr>
   <tr class="current-week">
     <td>Sept 11</td>
-    <td><a href="lessons/functions.html">Functions</a>, <a href="lessons/events.html">Events</a> and Objects </td>
+    <td><a href="lessons/functions.html">Functions</a><br>
+<a href="lessons/events.html">Events</a> <br>
+ Objects </td>
     <td><a href="/~jperetz/fall2012/projects/naptime/">Project 2</a></td>
     
   </tr>
   <tr>
     <td>Sept 18</td>
-    <td>Structured Data - <a href="lessons/arrays.html">Arrays</a> &amp; JSON</td>
+    <td>Structured Data - <a href="lessons/arrays.html">Arrays</a><br>
+ JSON</td>
    
     <td><a href="http://online.santarosa.edu/testbank/?24867">Quiz 2</a></td>
   </tr>
@@ -420,6 +423,7 @@ possible to better ensure such accommodations are implemented in a timely fashio
     <li><a href="http://student.santarosa.edu/~mlimoncz/javascript/"><i class="icon-user"></i> Miranda</a></li>
     <li><a href="http://student.santarosa.edu/~parchiab/cs55_11/index.html"><i class="icon-user"></i> Paul A.</a></li>
     <li><a href="http://student.santarosa.edu/~pmcgavin/"><i class="icon-user"></i> Paul McG</a></li>
+    <li><a href="http://student.santarosa.edu/~pedmunds/Javascript/"><i class="icon-user"></i> Phil</a></li>
     <li><a href="http://student.santarosa.edu/~rsathe/javascript/project1.html"><i class="icon-user"></i> Rohan</a></li>
     <li><a href="http://student.santarosa.edu/~rcapistr/javascript/assignments.html"><i class="icon-user"></i> Ron</a></li>
       <li><a href="http://student.santarosa.edu/~rcarter/java/java/javaclass.html"><i class="icon-user"></i> Rosa </a></li> 
@@ -429,6 +433,7 @@ possible to better ensure such accommodations are implemented in a timely fashio
       <li><a href=" http://student.santarosa.edu/~spen/CS55.11/"><i class="icon-user"></i> Sopheap </a></li>
       <li><a href="http://student.santarosa.edu/~savery/js/"><i class="icon-user"></i> Steve A</a></li>
      <li><a href="http://student.santarosa.edu/~skirkish/CS5511/home/index.html"><i class="icon-user"></i> Steve K</a></li>
+    <li><a href="http://student.santarosa.edu/~slu/javascript/index.html"><i class="icon-user"></i> Susying</a></li>
       <li><a href="http://student.santarosa.edu/~swright2/"><i class="icon-user"></i> Suzanne </a></li>
       <li><a href="http://student.santarosa.edu/~vmazza/javascript/homework.html"><i class="icon-user"></i> Vincent </a></li>
       
