menu and homepage updates

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ possible to better ensure such accommodations are implemented in a timely fashio
     <td>Sept 11</td>
     <td><a href="lessons/functions.html">Functions</a><br>
 <a href="lessons/events.html">Events</a> <br>
- Objects </td>
+ <a href="lessons/objects.html">Objects</a></td>
     <td><a href="/~jperetz/fall2012/projects/naptime/">Project 2</a></td>
     
   </tr>
