--- a/index.html
+++ b/index.html
@@ -26,12 +26,10 @@
         <div class="well">
         <h1 class="lead">What's New</h1>
        
-<p class="lead"> <a href="http://online.santarosa.edu/testbank/?24820">Quiz 1 </a> is open from Wednesday September  5 through Monday September 10.</p>
-
 <p class="lead">Read this lesson about <a href="lessons/events.html">Javascript Events</a></p>
 <p class="lead">Read these lessons about <a href="lessons/functions.html">Javascript Functions</a> and <a href="lessons/parameters-and-scope.html">Variable Scope</a></p>
     <p class="lead"><a href="/~jperetz/fall2012/projects/naptime/">Project 2: Programming a Timer with HTML5 Audio Player.</a>  Due date is September 20.</p>    </div>
-        <p class="lead">Read this lesson about <a href="lessons/arrays.html">Javascript Arrays</a></p>
+        <p class="lead">Read this lesson about <a href="lessons/objects.html">Javascript Objects</a></p>
       <h2>Course Information</h2>
           
           <h3>Lecture/Labs</h3>
