added slideshow project

--- a/projects/slideshow/index.html
+++ b/projects/slideshow/index.html
@@ -28,7 +28,7 @@
         <script>
             'use strict';
 
-            var mySlideShow = new SlideShow('slideshow');
+            var mySlideShow = new SlideShow('slideshow1');
 
             mySlideShow.addPicture({
                 src: 'images/brendan-eich.jpg',
