finshed dom lesson working on proj 3

--- a/projects/slideshow/index.html
+++ b/projects/slideshow/index.html
@@ -69,11 +69,21 @@
 </code>
 
 <p>2. The design of this slideshow uses a Fade In animation feature implemented using<a href="http://www.w3schools.com/css3/css3_animations.asp"> CSS3 @keyframe rules bound to a selector using the animation attribute</a> . </p>
+<div class="row">
+<div class="span6">
 <code>
-<pre class="prettyprint linenums">#pictureFrame {<br>    position: relative;<br>    padding: 0;<br>    -ms-animation: fadeIn 1s;<br>    -moz-animation: fadeIn 1s; <br>    -webkit-animation: fadeIn 1s; <br>    -o-animation: fadeIn 1s; <br>    animation: fadeIn 1s;<br>    width: 100%;<br>    margin: 0;<br>}<br>#pictureFrame img {<br>    margin: 0 auto;<br>    padding: 0;<br>    display: block;<br>}<br>#pictureFrame #pictureCaption {<br>    position: absolute;<br>    bottom: 0;<br>    left: 0;<br>    color: #fff;<br>    background: rgba(0, 0, 0, .5);<br>    padding: 15px 0;<br>    width: 100%;<br>    text-align: center;<br>}<br>@keyframes fadeIn {<br>    from {<br>        opacity: 0;<br>    }<br>    to {<br>        opacity: 1;<br>    }<br>}
+<pre class="prettyprint linenums">#pictureFrame {<br>    position: relative;<br>    padding: 0;<br>    -ms-animation: fadeIn 1s;<br>    -moz-animation: fadeIn 1s; <br>    -webkit-animation: fadeIn 1s; <br>    -o-animation: fadeIn 1s; <br>    animation: fadeIn 1s;<br>    width: 100%;<br>    margin: 0;<br>}<br>#pictureFrame img {<br>    margin: 0 auto;<br>    padding: 0;<br>    display: block;<br>}<br>#pictureFrame #pictureCaption {<br>    position: absolute;<br>    bottom: 0;<br>    left: 0;<br>    color: #fff;<br>    background: rgba(0, 0, 0, .5);<br>    padding: 15px 0;<br>    width: 100%;<br>    text-align: center;<br>}<br>
+</pre>
+</code>
+</div>
+<div class="span6">
+<code>
+<pre class="prettyprint linenums">@keyframes fadeIn {<br>    from {<br>        opacity: 0;<br>    }<br>    to {<br>        opacity: 1;<br>    }<br>}
 @-webkit-keyframes fadeIn {<br>    from {<br>        opacity: 0;<br>    }<br>    to {<br>        opacity: 1;<br>    }<br>}<br>@-moz-keyframes fadeIn {<br>    from {<br>        opacity: 0;<br>    }<br>    to {<br>        opacity: 1;<br>    }<br>}<br>@-o-keyframes fadeIn {<br>    from {<br>        opacity: 0;<br>    }<br>    to {<br>        opacity: 1;<br>    }<br>}<br>@-ms-keyframes fadeIn {<br>    from {<br>        opacity: 0;<br>    }<br>    to {<br>        opacity: 1;<br>    }<br>}</pre>
 </code>
+</div>
 
+</div>
 <p>
 3. .......</p>
 <code>
